<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="example.supervoo.droidcafe.MainActivity">

    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="10"
        android:title="@string/action_title_order"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_status"
        android:icon="@drawable/ic_status_info"
        android:orderInCategory="20"
        android:title="@string/action_title_status"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_heart"
        android:orderInCategory="30"
        android:title="@string/action_title_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_title_contact"
        app:showAsAction="never" />

</menu>
